compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__functions__unlabelled_after_labelled_external.snap
---
source: compiler-core/src/type_/tests/functions.rs
assertion_line: 26
expression: "external fn main(wibble: Int, Int) -> Int =\n  \"\" \"\"\n"
---
error: Unlabelled argument after labelled argument
  ┌─ /src/one/two.gleam:1:31
  │
1 │ external fn main(wibble: Int, Int) -> Int =
  │                               ^^^

All unlabelled arguments must come before any labelled arguments.

